[package]
name = "rsmq"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
futures = "0.3.31"
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
socketioxide = { version = "0.15.1", features = ["state"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = { version = "0.5.2", default-features = false }
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rust_socketio = { version = "0.6.0", features = ["async"] }
futures-util = "0.3.31"
reactive-signals = "0.1.0-alpha.4"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "pub"
path = "src/pub.rs"

[[bin]]
name = "sub"
path = "src/sub.rs"
